src/test/compile-fail/index_message.rs
fn main() {
    let z = ();
    log(error, z[0]); //! ERROR cannot index a value of type `()`
}
